# soatcar

./: .gitignore  Readme.md
Orchestrator/: install.txt  readme.md  soatcar.conf
Orchestrator/parts/camera/cpp/: camera.conf
Orchestrator/parts/camera/cpp/src/: Makefile  camera.cpp  camera.hpp  config.cpp  config.hpp  main.cpp
Orchestrator/parts/decision/cpp/: autopilot.conf
Orchestrator/parts/decision/cpp/opencv/: CMakeLists.txt  Makefile  autopilot.cpp  autopilot.hpp  config.cpp  config.hpp  install.txt  main.cpp  soatcar.cpp
Orchestrator/parts/joystick/cpp/: joystick.conf
Orchestrator/parts/joystick/cpp/src/: Makefile  config.cpp  config.hpp  joystick.cpp  joystick.hpp  main.cpp
Orchestrator/parts/pwm/cpp/: pwm.conf
Orchestrator/parts/pwm/cpp/src/: Makefile  config.cpp  config.hpp  main.cpp  pwm.cpp  pwm.hpp
Orchestrator/parts/webserver/node/: app.js  index.html  install.txt
Orchestrator/src/: Config.cpp  Config.hpp  Makefile  Orchestrator.cpp  Orchestrator.hpp  PartManager.cpp  PartManager.hpp  Utils.hpp  main.cpp
Orchestrator/tools/: SoatcarState.c  SoatcarState.h  SoatcarState.py  check.py  modmmap.py  test.py  testfile
Orchestrator/tools/cpp/: SoatcarState.cpp  SoatcarState.hpp  Utils.cpp  Utils.hpp  build.txt  test.cpp  testfile
Orchestrator/tools/js/: soatcarState.js  test.js
Orchestrator/tools/mmap-io/: mmap-io.js
Orchestrator/tools/python/: SoatcarState.py  check.py  test.py
salient-visualisation/: 20180808-sc1-dsi  salient.py
soatcar-webmonitor/: app.js  index.html  url du tuto.txt
